manifests/media-tools/caibre/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "calibre.ucdialplans.com"
  rules:
  - backendRefs:
    - name: calibre-service
      namespace: media-tools
      kind: Service
      port: 8083
